--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,72 @@
-fastapi[all]==0.78.0
-uvicorn[standard]==0.17.6
-pytest
+anyio==3.7.1
+appnope==0.1.3
+asgiref==3.5.0
+astroid==2.15.4
+asttokens==2.2.1
+backcall==0.2.0
+black==22.3.0
+certifi==2021.10.8
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.1.2
+cryptography==41.0.2
+decorator==5.1.1
+dill==0.3.6
+dj-database-url==0.5.0
+Django==4.0.3
+django-cors-headers==3.11.0
+djwto==0.0.3
+dnspython==2.4.2
+docutils==0.19
+exceptiongroup==1.1.2
+executing==1.2.0
+ez-setup==0.9
+fastapi==0.73.0
+flake8==4.0.1
+h11==0.14.0
+idna==3.3
+ipython==8.13.1
+isort==5.12.0
+jedi==0.18.2
+lazy-object-proxy==1.9.0
+matplotlib-inline==0.1.6
+mccabe==0.6.1
+mypy==1.2.0
+mypy-extensions==0.4.3
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.5.1
+prompt-toolkit==3.0.38
+psycopg2==2.9.3
+psycopg2-binary==2.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.8.0
+pycparser==2.21
+pydantic==1.10.12
+pyflakes==2.4.0
+Pygments==2.15.1
+PyJWT==2.8.0
+pylint==2.17.4
+pymongo==4.4.1
+pyserial==3.5
+requests==2.27.1
+sec-api==1.0.17
+Send2Trash==1.8.2
+six==1.16.0
+sniffio==1.3.0
+sqlparse==0.4.2
+stack-data==0.6.2
+starlette==0.17.1
+thonny==4.0.2
+tomli==2.0.1
+tomlkit==0.11.8
+traitlets==5.9.0
+typing_extensions==4.6.1
+urllib3==1.26.9
+uvicorn==0.17.4
+wcwidth==0.2.6
+whitenoise==5.3.0
+wrapt==1.15.0
