--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.5.0
 astroid==2.15.4
 asttokens==2.2.1
 backcall==0.2.0
+bcrypt==4.0.1
 black==22.3.0
 certifi==2021.10.8
 cffi==1.15.1
@@ -18,22 +19,25 @@ django-cors-headers==3.11.0
 djwto==0.0.3
 dnspython==2.4.2
 docutils==0.19
+ecdsa==0.18.0
 exceptiongroup==1.1.2
 executing==1.2.0
 ez-setup==0.9
-fastapi==0.73.0
+fastapi==0.92.0
 flake8==4.0.1
 h11==0.14.0
 idna==3.3
 ipython==8.13.1
 isort==5.12.0
 jedi==0.18.2
+jwtdown-fastapi==0.5.0
 lazy-object-proxy==1.9.0
 matplotlib-inline==0.1.6
 mccabe==0.6.1
 mypy==1.2.0
 mypy-extensions==1.0.0
 parso==0.8.3
+passlib==1.7.4
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -43,6 +47,7 @@ psycopg2==2.9.3
 psycopg2-binary==2.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.5.0
 pycodestyle==2.8.0
 pycparser==2.21
 pydantic==1.10.12
@@ -52,14 +57,17 @@ PyJWT==2.8.0
 pylint==2.17.4
 pymongo==4.4.1
 pyserial==3.5
+python-jose==3.3.0
+python-multipart==0.0.5
 requests==2.27.1
+rsa==4.9
 sec-api==1.0.17
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
 sqlparse==0.4.2
 stack-data==0.6.2
-starlette==0.17.1
+starlette==0.25.0
 thonny==4.0.2
 tomli==2.0.1
 tomlkit==0.11.8
