--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       WAIT_BEFORE: 5
       WAIT_TIMEOUT: 60
       # URL: mongodb://parkpro:parkpro@mongo:27017/
+      PARKS_API_KEY: ${PARKS_API_KEY}
     build:
       context: api
       dockerfile: Dockerfile.dev
