--- a/ghi/package.json
+++ b/ghi/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "states-us": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
