--- a/ghi/package.json
+++ b/ghi/package.json
@@ -12,9 +12,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer": "^2.3.0",
+    "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
     "react-image-gallery": "^1.3.0",
