--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,5 @@
 volumes:
   parkpro:
-
 services:
   fastapi:
     environment:
@@ -10,10 +9,10 @@ services:
       MONGOUSER: parkpro
       MONGOPASSWORD: parkpro
       SIGNING_KEY: eyJhbGciOiJIUzI1NiJ9.ew0KICAic3ViIjogIjEyMzQ1Njc4OTAiLA0KICAibmFtZSI6ICJBbmlzaCBOYXRoIiwNCiAgImlhdCI6IDE1MTYyMzkwMjINCn0.76DOgett0mUp9nzu0k8M1j2WuHr1IT662q0RglAI7P0
-      # WAIT_HOSTS:
+      WAIT_HOSTS: mongo:27017
       WAIT_BEFORE: 5
       WAIT_TIMEOUT: 60
-      # URL: mongodb://parkpro:parkpro@mongo:27017/
+      URL: mongodb://parkpro:parkpro@mongo:27017/
       PARKS_API_KEY: ${PARKS_API_KEY}
     build:
       context: api
