--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -26,7 +26,10 @@ ez-setup==0.9
 fastapi==0.92.0
 flake8==4.0.1
 h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.3
+iniconfig==2.0.0
 ipython==8.13.1
 isort==5.12.0
 jedi==0.18.2
@@ -35,13 +38,15 @@ lazy-object-proxy==1.9.0
 matplotlib-inline==0.1.6
 mccabe==0.6.1
 mypy==1.2.0
-mypy-extensions==1.0.0
+mypy-extensions==0.4.3
+packaging==23.1
 parso==0.8.3
 passlib==1.7.4
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==2.5.1
+pluggy==1.3.0
 prompt-toolkit==3.0.38
 psycopg2==2.9.3
 psycopg2-binary==2.9.6
@@ -57,6 +62,7 @@ PyJWT==2.8.0
 pylint==2.17.4
 pymongo==4.4.1
 pyserial==3.5
+pytest==7.4.1
 python-jose==3.3.0
 python-multipart==0.0.5
 requests==2.27.1
