--- a/ghi/package.json
+++ b/ghi/package.json
@@ -12,7 +12,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.9",
     "framer": "^2.3.0",
+    "javascript-time-ago": "^2.5.9",
     "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.0",
@@ -24,6 +26,7 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-time-ago": "^7.2.1",
     "states-us": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
